--- a/style.css
+++ b/style.css
@@ -8,32 +8,37 @@
 
 input {
   padding: 3px;
-  border: 2px solid rgb(197, 213, 228);
+  border: 2px solid rgb(197 , 213 , 228);
 }
 
 button {
   padding: 5px;
-  background-color: rgb(88, 218, 88);
+  background-color: rgb(88 , 218 , 88);
   border: 1px solid grey;
   border-radius: 10px;
 }
 
 #labTarefa {
-  font-family: 'Times New Roman', Times, serif;
+  font-family: Times New Roman, Times, serif;
   font-style: italic;
 }
 
 #apaga-tudo {
-  background-color: rgb(255, 34, 34);
+  background-color: rgb(255 , 34 , 34);
+  color: white;
+}
+
+#save {
+  background-color: rgb(93 , 34 , 255);
   color: white;
 }
 
 #remover-finalizados {
-  background-color: rgb(248, 248, 94);
+  background-color: rgb(248 , 248 , 94);
 }
 
 body {
-  background-color: rgb(53, 53, 53);
+  background-color: rgb(53 , 53 , 53);
 }
 
 .container {
@@ -44,15 +49,15 @@ body {
   margin-right: auto;
   margin-top: 25px;
   border-radius: 20px;
-  border: 2px solid rgb(197, 213, 228);
+  border: 2px solid rgb(197 , 213 , 228);
   padding: 7px;
 }
 
 #lista-tarefas {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: Courier New, Courier, monospace;
   text-align: left;
 }
 
-p, #labTarefa, button {
-  color: rgb(49, 49, 49);
+p , #labTarefa , button {
+  color: rgb(49 , 49 , 49);
 }
